Implemented generic JSON parser

--- a/haversine_distance_calculator/CMakeLists.txt
+++ b/haversine_distance_calculator/CMakeLists.txt
@@ -27,7 +27,7 @@ FetchContent_MakeAvailable(
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(haversine haversine.cpp reference.cpp)
+add_library(haversine haversine.cpp json.cpp reference.cpp)
 
 add_executable(haversine_exe main.cpp)
 target_link_libraries(haversine_exe PRIVATE haversine)
